Fix estimates buttons on small mobile phones
In order to display well on mobile screens
- replace width by max-width in css for buttons form
- increase the line spacing in the buttons form
- change an html id from Session to session
- add correct html id for buttons form

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -53,7 +53,7 @@ p {
 /* Custom element alignment */
 
 #team-vote-countdown {
-    width: 400px;
+    max-width: 400px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -64,4 +64,8 @@ p {
 
 #estimate-histograms {
   margin: 2em auto;
+}
+
+#estimates-buttons {
+  line-height: 275%;
 }
